tests/fail/wrong_fully_qual_parameters_section_placement.stderr
error: The #[roxygen] attribute must come before the parameters_section attribute.
       Place it before any of the doc comments for the function.
 --> tests/fail/wrong_fully_qual_parameters_section_placement.rs:5:1
  |
5 | #[roxygen::roxygen]
  | ^^^^^^^^^^^^^^^^^^^
